--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+<!-- DOCTYPE TAG -->
+<!DOCTYPE html>
+
+<!-- HTML TAG -->
+<html>
+
+<!-- HEAD -->
+<head>
+
+    <meta charset="UTF-8">
+
+    <!-- TITLE -->
+    <title>Home</title>
+
+    <!--Jquery CDN-->
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"
+            integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+
+    <!--Latest compiled and minified CSS-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!--Latest compiled and minified JavaScript-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+
+    <!--Linking css stylesheet-->
+    <!--
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+    -->
+
+</head> <!-- END HEAD TAG -->
+
+<!-- BODY -->
+<body class="text-center">
+
+
+<h1>Hello World</h1>
+
+<form>
+    Train Name: <input type="text" id="trainName"> <br> <br>
+    Destination: <input type="text" id="destination"> <br> <br>
+    First Train Time: <input type="text" id="firstTrain"> <br> <br>
+    Frequency: <input type="text" id="frequency"> <br> <br>
+    <button class="signup">Sign Up</button> <br> <br>
+
+</form>
+
+
+<!-- LINK TO JS FILE -->
+<script type="text/javascript" src="train.js"></script>
+
+
+<!--FOOTER-->
+<footer class="footer">
+
+    <div class="container">
+
+        <p>&copy; Sakina Shivji </p>
+
+    </div>
+
+</footer>
+
+</body> <!-- END BODY TAG -->
