--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- Optional theme-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
     <!--Latest compiled and minified JavaScript-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <!--Linking css stylesheet-->
     <!--
         <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -55,17 +51,5 @@
 
 <!-- LINK TO JS FILE -->
 <script type="text/javascript" src="train.js"></script>
-
-
-<!--FOOTER-->
-<footer class="footer">
-
-    <div class="container">
-
-        <p>&copy; Sakina Shivji </p>
-
-    </div>
-
-</footer>
 
 </body> <!-- END BODY TAG -->
